Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108532

QWebEngine unbuildable on MSVC2022

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 6.4.0, 6.4.1, 6.4
    • WebEngine
    • None
    • MSVC2022-x64 (17.4.0)
    • Windows
    • 3801bba822 (qt/qtwebengine-chromium/102-based)

    Description

      QWebEngine module fails to build with MSVC2022. Is MSVC2022 supported for QWebEngine or is MSVC2019 the only supported environment for QWebEngine in Windows?

      Build log

      [1500/28477] CXX obj/skia/skia_core_and_effects/SkKeyHelpers.obj
      FAILED: obj/skia/skia_core_and_effects/SkKeyHelpers.obj
      ninja -t msvc -e environment.x64 -- "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\bin\Hostx64\x64/cl.exe" /c ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia/src/core/SkKeyHelpers.cpp /Foobj/skia/skia_core_and_effects/SkKeyHelpers.obj /nologo /showIncludes -DUSE_AURA=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D_HAS_EXCEPTIONS=0 -D__STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=NTDDI_WIN10_FE -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DSK_CODEC_DECODES_PNG -DSK_CODEC_DECODES_WEBP -DSK_ENCODE_PNG -DSK_ENCODE_WEBP -DSK_ENABLE_SKSL -DSK_UNTIL_CRBUG_1187654_IS_FIXED "-DSK_USER_CONFIG_HEADER=\"../../skia/config/SkUserConfig.h\"" -DSK_WIN_FONTMGR_NO_SIMULATIONS -DSK_GL -DSK_CODEC_DECODES_JPEG -DSK_ENCODE_JPEG -DSK_HAS_WUFFS_LIBRARY -DSK_VULKAN=1 -DSK_SUPPORT_GPU=1 "-DSK_GPU_WORKAROUNDS_HEADER=\"gpu/config/gpu_driver_bug_workaround_autogen.h\"" -DGR_GL_FUNCTION_TYPE=__stdcall -DVK_USE_PLATFORM_WIN32_KHR "-DSK_FREETYPE_MINIMUM_RUNTIME_VERSION=(((FREETYPE_MAJOR) * 0x01000000) | ((FREETYPE_MINOR) * 0x00010000) | ((FREETYPE_PATCH) * 0x00000100))" -DSKIA_IMPLEMENTATION=1 -DSK_GAMMA_SRGB -DSK_GAMMA_CONTRAST=0.5 -DSK_DEFAULT_FONT_CACHE_LIMIT=20971520 -DSK_DEFAULT_FONT_CACHE_COUNT_LIMIT=256 -D_CRT_NONSTDC_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS -Igen -I../../../../../../qt641/qtwebengine/src/3rdparty/chromium -I../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia -I../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/wuffs/src/release/c -I../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/vulkan/include -I../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/vulkan-deps/vulkan-headers/src/include /Gy /FS /bigobj /utf-8 /Zc:sizedDealloc- /MD /O2 /Ob2 /Oy- /Zc:inline /Gw /wd4800 /wd4267 /wd4091 /wd4127 /wd4251 /wd4275 /wd4312 /wd4324 /wd4351 /wd4355 /wd4503 /wd4589 /wd4611 /wd4100 /wd4121 /wd4244 /wd4505 /wd4510 /wd4512 /wd4610 /wd4838 /wd4995 /wd4996 /wd4456 /wd4457 /wd4458 /wd4459 /wd4200 /wd4201 /wd4204 /wd4221 /wd4245 /wd4267 /wd4305 /wd4389 /wd4702 /wd4701 /wd4703 /wd4661 /wd4706 /wd4715 /wd4003 /wd4068 /wd5051 /wd4244 /std:c++17 /wd5041 /std:c++17 /Zc:alignedNew- /TP /GR- /wd4577 /Fd"obj/skia/skia_core_and_effects_cc.pdb"
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(34): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(34): error C2061: syntax error: identifier 'string'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(34): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(36): error C2187: syntax error: 'const' was unexpected here
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(37): error C2187: syntax error: 'const' was unexpected here
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(37): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(38): error C2187: syntax error: 'const' was unexpected here
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(38): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(38): error C2065: 'string': undeclared identifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(38): error C2923: 'std::vector': 'string' is not a valid template type argument for parameter '_Ty'../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(38): note: see declaration of 'string'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(38): error C2976: 'std::vector': too few template arguments
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\vector(494): note: see declaration of 'std::vector'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(47): error C2061: syntax error: identifier 'GenerateGlueCodeForEntry'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(59): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(59): error C3646: 'getMangledUniformName': unknown override specifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(59): error C2059: syntax error: '('
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(59): error C2238: unexpected token(s) preceding ';'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(65): error C3646: 'fGlueCodeGenerator': unknown override specifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(65): error C2059: syntax error: '='
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(65): error C2238: unexpected token(s) preceding ';'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(54): error C2065: 'glueCodeGenerator': undeclared identifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(55): error C2065: 'numChildren': undeclared identifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(56): error C2065: 'dataPayloadExpectations': undeclared identifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(54): error C2614: 'SkShaderSnippet': illegal member initialization: 'fGlueCodeGenerator' is not a base or member
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(89): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(89): error C3646: 'emitGlueCodeForEntry': unknown override specifier
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(89): error C2059: syntax error: '('
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(90): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(91): error C2039: 'string': is not a member of 'std'
      C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.34.31933\include\unordered_map(24): note: see declaration of 'std'
      ../../../../../../qt641/qtwebengine/src/3rdparty/chromium/third_party/skia\src/core/SkShaderCodeDictionary.h(92): error C2238: unexpected token(s) preceding ';'
      [1509/28477] CXX obj/skia/skia_core_and_effects/SkLocalMatrixImageFilter.obj
      ninja: build stopped: subcommand failed.
      
      FAILED: qtwebengine/src/core/Release/AMD64/QtWebEngineCore.stamp qtwebengine/src/core/Release/AMD64/QtWebEngineCore C:/qt641-msvc2022_64-shared/qtwebengine/src/core/Release/AMD64/QtWebEngineCore.stamp C:/qt641-msvc2022_64-shared/qtwebengine/src/core/Release/AMD64/QtWebEngineCore
      cmd.exe /C "cd /D C:\qt641-msvc2022_64-shared\qtwebengine\src\core && C:\Users\eXhumer\Desktop\QtBuild-6.4.1\ninja.exe -C C:/qt641-msvc2022_64-shared/qtwebengine/src/core/Release/AMD64 QtWebEngineCore"
      ninja: build stopped: subcommand failed.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            nadimasad Nadim Asaduzzaman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes