skia: fix compilation with MSVC2022

compilation with MSVC2022 failed due to missing string definition within std namespace

Fixes: QTBUG-108532
Change-Id: I2119952d5809895e2511ce1c2c262022af3ba191
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/444132
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>